--- a/css/styles.css
+++ b/css/styles.css
@@ -212,10 +212,15 @@ img {
 
 .modal {
   position: absolute;
+  text-align: center;
   left: 50%;
   top: 50%;
   width: 408px;
   min-height: 576px;
+  padding-top: 72px;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -250,6 +255,84 @@ img {
 .icon-close:focus {
   background-color: #404bbf;
   fill: #ffffff;
+}
+.form {
+  margin-top: 16px;
+}
+.form-label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 8px;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.sp-label {
+  margin-right: auto;
+}
+.input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.form-label:focus-within > .icon-label {
+  fill: var(--secondary-bg-color);
+}
+.input:focus {
+  border: 1px solid var(--secondary-bg-color);
+  border-radius: 4px;
+}
+
+.modal-title {
+  text-align: center;
+  margin-bottom: 16px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
+}
+.textarea {
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+}
+.checkbox-label {
+  display: block;
+  margin-top: 16px;
+  margin-bottom: 24px;
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.04em;
+  color: #757575;
+}
+.input-checkbox {
+  margin-top: 4px;
+}
+.btn-submit {
+  display: inline-block;
+  padding: 16px 32px;
+  border: none;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.icon-label {
+  position: absolute;
+  top: 50%;
+  left: 16px;
 }
 
 /*------------ Adventages------------------ */
