--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
   --primary-bg-color: #ffffff;
   --secondary-bg-color: #4d5ae5;
   --bord-color: #e7e9fc;
+  --time-tranz: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 body {
   position: relative;
@@ -263,6 +264,7 @@ img {
   position: relative;
   display: flex;
   flex-direction: column;
+  cursor: pointer;
   margin-bottom: 8px;
   font-size: 12px;
   line-height: 1.333;
@@ -277,8 +279,10 @@ img {
   height: 40px;
   padding-left: 38px;
   margin-top: 4px;
+  outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  transition: border var(--time-tranz);
 }
 .form-label:focus-within > .icon-label {
   fill: var(--secondary-bg-color);
@@ -298,13 +302,23 @@ img {
 .textarea {
   width: 100%;
   height: 120px;
+  resize: none;
   padding: 8px 16px;
   margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
+  outline: none;
+  transition: border-color var(--time-tranz);
 }
+.textarea:focus {
+  border-color: var(--secondary-bg-color);
+}
+
 .checkbox-label {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
   margin-top: 16px;
   margin-bottom: 24px;
   font-size: 12px;
@@ -313,13 +327,29 @@ img {
   color: #757575;
 }
 .input-checkbox {
-  margin-top: 4px;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  margin: -1px;
+}
+.checkbox-link {
+  font-size: 12px;
+  line-height: 1.333;
+  letter-spacing: 0.04em;
+  color: var(--secondary-bg-color);
 }
 .btn-submit {
   display: inline-block;
   padding: 16px 32px;
   border: none;
   font-family: inherit;
+  cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -333,6 +363,22 @@ img {
   position: absolute;
   top: 50%;
   left: 16px;
+  transition: fill var(--time-tranz);
+}
+.checkbox-icon {
+  display: inline-block;
+  margin-right: 8px;
+  width: 16px;
+  height: 16px;
+  border: 1.25px solid #2e2f42;
+  border-radius: 2px;
+}
+.input-checkbox:checked + .checkbox-icon {
+  background-image: url(../images/Property.svg);
+  background-size: contain;
+  background-position: center;
+  background-origin: border-box;
+  border-color: #404bbf;
 }
 
 /*------------ Adventages------------------ */
