--- a/css/styles.css
+++ b/css/styles.css
@@ -349,6 +349,8 @@ img {
 }
 .btn-submit {
   display: inline-block;
+  width: 169px;
+  min-height: 56px;
   padding: 16px 32px;
   border: none;
   font-family: inherit;
