--- a/css/styles.css
+++ b/css/styles.css
@@ -274,25 +274,30 @@ img {
 }
 .sp-label {
   margin-right: auto;
+  margin-bottom: 4px;
 }
 .input {
   width: 100%;
   height: 40px;
   padding-left: 38px;
-  margin-top: 4px;
   outline: none;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   transition: border var(--time-tranz);
 }
-.form-label:focus-within > .icon-label {
+.form-label:focus-within > .container-input .icon-label {
   fill: var(--secondary-bg-color);
 }
 .input:focus {
   border: 1px solid var(--secondary-bg-color);
   border-radius: 4px;
 }
-
+.container-input {
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 0;
+}
 .modal-title {
   text-align: center;
   margin-bottom: 16px;
@@ -373,6 +378,7 @@ img {
   position: absolute;
   top: 50%;
   left: 16px;
+  transform: translateY(-50%);
   transition: fill var(--time-tranz);
 }
 .checkbox-icon {
@@ -664,6 +670,9 @@ img {
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
+}
+.subscript-input:focus {
+  outline: auto;
 }
 [placeholder="E-mail"] {
   font-style: normal;
